feat: add WhatsApp integration and improve UI components - Add floating WhatsApp button with 'WhatsApp Us' text - Add WhatsApp buttons in footer and contact page - Improve text visibility across landing page sections - Fix Featured Products button layout to match Collections page - Update favicon to custom SVG design - Change website title to 'Ethela' - Update price display to Rupees in admin panel - Enable individual blog post pages with BlogDetail component - Add Blockchain Verification page and navigation - Improve hero section text visibility with drop shadows

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/lovable-uploads/0e6afde7-4222-42df-8de6-490b1df4794d.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ethereal-sparkle-admin</title>
+    <title>Ethela</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="ethereal-sparkle-admin" />
+    <meta property="og:title" content="Ethela" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
